--- a/README
+++ b/README
@@ -61,6 +61,9 @@ Special Thanks
 *	Catherine Biscourp <cbiscourp@sbuilders.com> for the 
 		GNUstepWeb logos and some other things...
 
+*	Manuel Guesdon <mguesdon@orange-concept.com
+		Original developer
+
 *       David Wetzel <dave@turbocat.de> from Turbocat's Development
 
 *       David Ayers <d.ayers@inode.at>
