* GSWeb/GSWApplication.m:   fix -baseURL * GSWeb/GSWResourceManager.m:   fix urlForResourceNamed:... when using web server
git-svn-id: svn+ssh://svn.gna.org/svn/gnustep/libs/gsweb/trunk@37820 72102866-910b-0410-8b05-ffd578937521

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2014-04-29  Manuel Guesdon <mguesdon@orange-concept.com>
+	* GSWeb/GSWApplication.m:
+	  fix -baseURL
+	* GSWeb/GSWResourceManager.m:
+	  fix urlForResourceNamed:... when using web server
 2014-04-17  Manuel Guesdon <mguesdon@orange-concept.com>
 	* GSWeb/GSWPopUpButton.m	
 	  fix _slowTakeValuesFromRequest:inContext: 
