* GSWDatabase/WODisplayGroup.m   respect GNUstep coding standard (curly brackets placement, indentation)   fix _deleteObject: (undo selectors)   fix _insertObjectWithObjectAndIndex: (NSAssert)   fix insertObject:atIndex: (undo selectors)
git-svn-id: svn+ssh://svn.gna.org/svn/gnustep/libs/gsweb/trunk@37918 72102866-910b-0410-8b05-ffd578937521

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+2014-05-29  Manuel Guesdon <mguesdon@orange-concept.com>
+	* GSWDatabase/WODisplayGroup.m
+	  respect GNUstep coding standard (curly brackets placement, indentation)
+	  fix _deleteObject: (undo selectors)
+	  fix _insertObjectWithObjectAndIndex: (NSAssert)
+	  fix insertObject:atIndex: (undo selectors)
 2014-05-22  Manuel Guesdon <mguesdon@orange-concept.com>
 	* GSWeb/GSWAssociation.h
 	  replace logTakeValue: by _logPullValue:inComponent:
