* GSWeb/GSWConstants.[hm]   add GSWClassName_Component * GSWeb/GSWComponentDefinition.m   fix -componentClass to use GSWClassName_Component
git-svn-id: svn+ssh://svn.gna.org/svn/gnustep/libs/gsweb/trunk@37919 72102866-910b-0410-8b05-ffd578937521

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,4 +1,9 @@
 2014-05-29  Manuel Guesdon <mguesdon@orange-concept.com>
+	* GSWeb/GSWConstants.[hm]
+	  add GSWClassName_Component
+	* GSWeb/GSWComponentDefinition.m
+	  fix -componentClass to use GSWClassName_Component
+2014-05-29  Manuel Guesdon <mguesdon@orange-concept.com>
 	* GSWDatabase/WODisplayGroup.m
 	  respect GNUstep coding standard (curly brackets placement, indentation)
 	  fix _deleteObject: (undo selectors)
