* GSWDatabase/WODisplayGroup.m   add NSArray -objectsAtIndexesArray:   add NSArray -isEqualByObjectPointer:   fix -setSelectionIndexes:
git-svn-id: svn+ssh://svn.gna.org/svn/gnustep/libs/gsweb/trunk@37921 72102866-910b-0410-8b05-ffd578937521

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,4 +1,9 @@
 2014-05-29  Manuel Guesdon <mguesdon@orange-concept.com>
+	* GSWDatabase/WODisplayGroup.m
+	  add NSArray -objectsAtIndexesArray:
+	  add NSArray -isEqualByObjectPointer:
+	  fix -setSelectionIndexes:
+2014-05-29  Manuel Guesdon <mguesdon@orange-concept.com>
 	* GSWeb/GSWConstants.[hm]
 	  add GSWClassName_Component
 	* GSWeb/GSWComponentDefinition.m
