* GSWDatabase/GSWHTMLDynamicElement.[hm]   add -hasNonURLAttributes   add -hasURLAttributes   add -hasConstantAttributes * GSWeb/GSWRadioButtonList.m   handle disabled association   handle other associations (like id, onChange, etc) * GSWeb/GSWCheckBoxList.m   handle disabled association   handle other associations (like id, onChange, etc)
git-svn-id: svn+ssh://svn.gna.org/svn/gnustep/libs/gsweb/trunk@37922 72102866-910b-0410-8b05-ffd578937521

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,4 +1,15 @@
 2014-05-29  Manuel Guesdon <mguesdon@orange-concept.com>
+	* GSWDatabase/GSWHTMLDynamicElement.[hm]
+	  add -hasNonURLAttributes
+	  add -hasURLAttributes
+	  add -hasConstantAttributes
+	* GSWeb/GSWRadioButtonList.m
+	  handle disabled association
+	  handle other associations (like id, onChange, etc)
+	* GSWeb/GSWCheckBoxList.m
+	  handle disabled association
+	  handle other associations (like id, onChange, etc)
+2014-05-29  Manuel Guesdon <mguesdon@orange-concept.com>
 	* GSWDatabase/WODisplayGroup.m
 	  add NSArray -objectsAtIndexesArray:
 	  add NSArray -isEqualByObjectPointer:
