* GSWeb/GSWRadioButtonList.m   Remove escapeHTML association assign (done in GSWInput) * GSWeb/GSWCheckBoxList.m   Remove escapeHTML association assign (done in GSWInput) * GSWeb.framework/GSWInput.m   Fix -init...
git-svn-id: svn+ssh://svn.gna.org/svn/gnustep/libs/gsweb/trunk@37923 72102866-910b-0410-8b05-ffd578937521

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,10 @@
+2014-05-30  Manuel Guesdon <mguesdon@orange-concept.com>
+	* GSWeb/GSWRadioButtonList.m
+	  Remove escapeHTML association assign (done in GSWInput)
+	* GSWeb/GSWCheckBoxList.m
+	  Remove escapeHTML association assign (done in GSWInput)
+	* GSWeb.framework/GSWInput.m
+	  Fix -init...
 2014-05-29  Manuel Guesdon <mguesdon@orange-concept.com>
 	* GSWDatabase/GSWHTMLDynamicElement.[hm]
 	  add -hasNonURLAttributes
