--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,6 @@
+2014-06-11  Manuel Guesdon <mguesdon@orange-concept.com>
+	* GSWeb/GSWAssociation.m
+	  fix EOValidatedObjectUserInfoKey value	
 2014-05-30  Sebastian Reitenbach <sebastia@l00-bugdead-prods.de>
 	* nearly every file
 	  get rid of RCS_ID
