* GSWeb/GSWHyperlink.m   fix -appendAttribute:... for nil href value
git-svn-id: svn+ssh://svn.gna.org/svn/gnustep/libs/gsweb/trunk@37974 72102866-910b-0410-8b05-ffd578937521

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,6 @@
+2014-07-01  Manuel Guesdon <mguesdon@orange-concept.com>
+	* GSWeb/GSWHyperlink.m
+	  fix -appendAttribute:... for nil href value
 2014-06-11  Manuel Guesdon <mguesdon@orange-concept.com>
 	* GSWeb/GSWAssociation.m
 	  fix EOValidatedObjectUserInfoKey value	
