--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,6 @@
+2014-07-04  Manuel Guesdon <mguesdon@orange-concept.com>
+	* GSWeb/GSWBody.m
+	  fix initWithName:...
 2014-07-01  Manuel Guesdon <mguesdon@orange-concept.com>
 	* GSWeb/GSWHyperlink.m
 	  fix -appendAttribute:... for nil href value
