downcase Header keys contants
git-svn-id: svn+ssh://svn.gna.org/svn/gnustep/libs/gsweb/trunk@38401 72102866-910b-0410-8b05-ffd578937521

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,4 +1,7 @@
 2015-03-11  Manuel Guesdon <mguesdon@orange-concept.com>
+	* GSWeb/GSWConstants.m
+	  downcase Header keys
+2015-03-11  Manuel Guesdon <mguesdon@orange-concept.com>
 	* GSWeb/GSWHTTPIO.m
 	  force header keys to lowercase
 2014-07-04  Manuel Guesdon <mguesdon@orange-concept.com>
